--- a/build.gradle
+++ b/build.gradle
@@ -3,33 +3,37 @@ apply plugin: 'application'
 version = '1.0'
 mainClassName='Telldus'
 
-    repositories {
-        mavenCentral()
-		jcenter()
-    }
-	compileJava {
-		targetCompatibility = JavaVersion.VERSION_1_8
-		sourceCompatibility = JavaVersion.VERSION_1_8
-	}
+repositories {
+  mavenCentral()
+  jcenter()
+}
 
-    dependencies {
-    	compile 'org.codehaus.groovy:groovy-all:2.1.9'
-		compile 'com.amazonaws:aws-lambda-java-core:1.0.0'
-		compile 'org.scribe:scribe:1.3.7'
-		compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-		compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1'
+compileJava {
+  targetCompatibility = JavaVersion.VERSION_1_8
+  sourceCompatibility = JavaVersion.VERSION_1_8
+}
 
-    }
-	
-	task uberjar(type: Jar,dependsOn:[':compileJava',':compileGroovy']) {
-		from files(sourceSets.main.output)
-		from configurations.runtime.asFileTree.files.collect { zipTree(it) }
+dependencies {
+  compile 'org.codehaus.groovy:groovy-all:2.4.7'
+  compile 'com.amazonaws:aws-lambda-java-core:1.1.0'
 
-		manifest {
-			attributes 'Main-Class': mainClassName
-		}
-	}
+  compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.21'
+  compile group: 'ch.qos.logback', name:'logback-classic', version: '1.1.7'
+  compile group: 'ch.qos.logback', name:'logback-core', version: '1.1.7'
+  compile group: 'com.github.scribejava', name: 'scribejava-apis', version: '3.3.0'
+  compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+  compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1'
+}
 
-	task wrapper(type: Wrapper) {
-		gradleVersion = '2.11'
-	}
+task uberjar(type: Jar, dependsOn:[':compileJava',':compileGroovy']) {
+  from files(sourceSets.main.output)
+  from configurations.runtime.asFileTree.files.collect { zipTree(it) }
+
+  manifest {
+    attributes 'Main-Class': mainClassName
+  }
+}
+
+task wrapper(type: Wrapper) {
+  gradleVersion = '3.2.1'
+}
